...
            }
        }
    }

    companion object {
        const val SETTINGS = "Settings"
        const val PLAY = "Play Game"
        const val CHAT = "Chat"
        const val RECAPS = "Recaps"
    }
}

@Composable
...
