...
            testTag = "creditsButton",
            onClick = { context.startActivity(Intent(context, CreditsActivity::class.java)) },
            text = CREDITS_BUTTON,
            icon = ImageVector.vectorResource(R.drawable.group)
        )

        // Rules of "Guess It!" online game
        MainMenuButton(
            testTag = "guessItRulesButton",
            onClick = { context.startActivity(Intent(context, GuessItRulesActivity::class.java)) },
            text = ONLINE_RULES,
            icon = ImageVector.vectorResource(R.drawable.rules)
        )
...
